9. Шаблоны проектирования в Stream API [#343591]